--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="main">
-    <img src="/images/image-qr-code.png" alt="scanner">
+    <img src="image-qr-code.png" alt="scanner">
     <div class="text">
       <h4>Improve your front-end skills by building projects</h4>
       <p id="l1">Scan the QR code to visit Frontend </p>
